--- a/index.html
+++ b/index.html
@@ -62,16 +62,25 @@
 
 <div class="right-column">
 <div class="generation-panel">
-<div id="conhecimento"	
+	
+	
+<div id="conhecimentoGenerationPanel" class="panel resource-generation" data-resource="conhecimento">
 <h3>Gerar Conhecimento</h3>
-<div id="conhecimentoGenerationPanel" class="panel resource-generation">
-<h3>Estudar</h3>
-    <div class="production-label" id="conhecimentoProductionLabel">Produção: 10/10s</div>
+<!--     <div class="production-label" id="conhecimentoProductionLabel">Produção: 10/10s</div>
     <div class="progress-bar"><div class="progress" id="conhecimentoProgress1"></div></div>
     <div class="timer" id="conhecimentoTimer1"></div>
     <button id="generateConhecimento1">Gerar Conhecimento (Custo: 10 Conhecimento)</button>
     <p>Nível: <span id="conhecimentoLevel1">1</span></p>
+</div> -->
+
+ <div class="generation-subpanel" data-resource="conhecimento">
+        <div class="production-label"></div>
+        <div class="progress-bar"><div class="progress"></div></div>
+        <div class="timer"></div>
+        <button class="generate-button"></button>
+        <p>Nível: <span class="level">1</span></p>
 </div>
+	
 </div>
 	
 <div id="granaGenerationPanel" class="panel resource-generation hidden">
