--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
 <div class="generation-panel">
 	
 	
-<div id="conhecimentoGenerationPanel" class="panel resource-generation" data-resource="conhecimento">
+<div id="conhecimentoGenerationPanel" class="panel resource-generation">
+	
 <h3>Gerar Conhecimento</h3>
 <!--     <div class="production-label" id="conhecimentoProductionLabel">Produção: 10/10s</div>
     <div class="progress-bar"><div class="progress" id="conhecimentoProgress1"></div></div>
@@ -73,7 +74,7 @@
     <p>Nível: <span id="conhecimentoLevel1">1</span></p>
 </div> -->
 
- <div class="generation-subpanel" data-resource="conhecimento">
+ <div class="generation-subpanel" data-resourcegen="conhecimento1">
         <div class="production-label"></div>
         <div class="progress-bar"><div class="progress"></div></div>
         <div class="timer"></div>
