--- a/index.html
+++ b/index.html
@@ -65,50 +65,11 @@
 	
 	
 <div id="conhecimentoGenerationPanel" class="panel resource-generation">
-	
 <h3>Gerar Conhecimento</h3>
-    <div class="production-label" id="conhecimentoProductionLabel">Produção: 10/10s</div>
-    <div class="progress-bar"><div class="progress" id="conhecimentoProgress1"></div></div>
-    <div class="timer" id="conhecimentoTimer1"></div>
-    <button id="generateConhecimento1">Gerar Conhecimento (Custo: 10 Conhecimento)</button>
-    <p>Nível: <span id="conhecimentoLevel1">1</span></p>
-</div>
+<div id="conhecimentoGenerators"></div>
 
-<!--  <div class="generation-subpanel" data-resourcegen="conhecimento1">
-        <div class="production-label"></div>
-        <div class="progress-bar"><div class="progress"></div></div>
-        <div class="timer"></div>
-        <button class="generate-button"></button>
-        <p>Nível: <span class="level">1</span></p>
-</div> -->
-	
-<!-- </div> -->
-	
-<div id="granaGenerationPanel" class="panel resource-generation hidden">
-    <h3>Gerar Grana</h3>
-    <div class="production-label" id="granaProductionLabel">Produção: 10/10s</div>
-    <div class="progress-bar"><div class="progress" id="granaProgress1"></div></div>
-    <div class="timer" id="granaTimer1"></div>
-    <button id="generateGrana1">Gerar Grana (Custo: 10 Conhecimento)</button>
-    <p>Nível: <span id="granaLevel1">1</span></p>
 </div>
 	
-<div id="codigoGenerationPanel" class="panel resource-generation hidden">
-    <h3>Gerar Código</h3>
-    <div class="production-label" id="codigoProductionLabel">Produção: 10/10s</div>
-    <div class="progress-bar"><div class="progress" id="codigoProgress1"></div></div>
-    <div class="timer" id="codigoTimer1"></div>
-    <button id="generateCodigo1">Gerar Código (Custo: 10 Conhecimento)</button>
-</div>
-	
-<div id="dadosGenerationPanel" class="panel resource-generation hidden">
-    <h3>Gerar Dados</h3>
-    <div class="production-label" id="dadosProductionLabel">Produção: 10/10s</div>
-    <div class="progress-bar"><div class="progress" id="dadosProgress1"></div></div>
-    <div class="timer" id="dadosTimer1"></div>
-    <button id="generateDados1">Gerar Dados (Custo: 10 Conhecimento)</button>
-    <p>Nível: <span id="dadosLevel1">1</span></p>
-</div>
 
 	
             </div>
