--- a/index.html
+++ b/index.html
@@ -62,7 +62,24 @@
 
 <div class="right-column">
 <div class="generation-panel">
-<div id="conhecimentoGenerationPanel" class="panel resource-generation">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+//sem mexer
+<!-- <div id="conhecimentoGenerationPanel" class="panel resource-generation">
     <h3>Gerar Conhecimento</h3>
     <div class="production-label" id="conhecimentoProductionLabel">Produção: 10/10s</div>
     <div class="progress-bar"><div class="progress" id="conhecimentoProgress1"></div></div>
@@ -94,7 +111,7 @@
     <div class="timer" id="dadosTimer1"></div>
     <button id="generateDados1">Gerar Dados (Custo: 10 Conhecimento)</button>
     <p>Nível: <span id="dadosLevel1">1</span></p>
-</div>
+</div> -->
             </div>
         </div>
     </div>
