--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </div>
             </div>
         </div>
-    </div>
+  
 
 
 
@@ -97,9 +97,8 @@
 
 
 
-
-
-//sem mexer
+<!-- 
+//sem mexer -->
 <!-- <div class="right-column">
 <div class="generation-panel"> -->
 <!-- <div id="conhecimentoGenerationPanel" class="panel resource-generation">
@@ -135,12 +134,11 @@
     <button id="generateDados1">Gerar Dados (Custo: 10 Conhecimento)</button>
     <p>Nível: <span id="dadosLevel1">1</span></p>
 </div> -->
-            </div>
+<!--             </div>
         </div>
-    </div>
+    </div> -->
 
 
 	
-
 </body>
-	    
+</div>	    
