--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <p>Nível: <span id="conhecimentoLevel1">1</span></p>
 </div>
 
-<div id="conhecimento3GenerationPanel">	
+<div id="conhecimento3GenerationPanel" class="panel hidden>	
     <div class="production-label" id="conhecimentoProductionLabel">Produção: 10/10s</div>
     <div class="progress-bar"><div class="progress" id="conhecimentoProgress1"></div></div>
     <div class="timer" id="conhecimentoTimer1"></div>
@@ -89,7 +89,7 @@
     <p>Nível: <span id="conhecimentoLevel1">1</span></p>
 </div>
 
-<div id="conhecimento4GenerationPanel">	
+<div id="conhecimento4GenerationPanel" class="panel hidden>	
     <div class="production-label" id="conhecimentoProductionLabel">Produção: 10/10s</div>
     <div class="progress-bar"><div class="progress" id="conhecimentoProgress1"></div></div>
     <div class="timer" id="conhecimentoTimer1"></div>
