--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
             </div>
             <div class="upgrades-panel">
                 <div class="panel-title">Upgrades</div>
-                <button id="unlockGrana" class="upgrade-button" data-cost="100">G</button>		
-                <button id="unlockCodigo" class="upgrade-button" data-cost="200">C</button>
-                <button id="unlockDados" class="upgrade-button" data-cost="300">D</button>
+                <button id="unlockGrana" class="upgrade-button" data-cost="100">Trabalhar</button>		
+                <button id="unlockCodigo" class="upgrade-button" data-cost="200">Programar</button>
+                <button id="unlockDados" class="upgrade-button" data-cost="300">Treinar</button>
             </div>
         </div>
         <div class="right-column">
