--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
             <div class="click-panel">
                 <div id="clickable"></div>
                 <div>
-                    <button id="learnBtn">Aprender</button>
-                    <button id="workBtn" class="hidden">Trabalhar</button>
-                    <button id="codeBtn" class="hidden">Programar</button>
-                    <button id="trainBtn" class="hidden">Treinar</button>
+                    <button id="conhecimentoBtn">Aprender</button>
+                    <button id="granaBtn" class="hidden">Trabalhar</button>
+                    <button id="codigoBtn" class="hidden">Programar</button>
+                    <button id="dadosBtn" class="hidden">Treinar</button>
                 </div>
             </div>
             <div class="upgrades-panel">
