--- a/index.html
+++ b/index.html
@@ -48,9 +48,13 @@
             </div>
             <div class="upgrades-panel">
                 <div class="panel-title">Upgrades</div>
+                <button id="unlockConhecimento1" class="upgrade-button" data-cost="20">Treinar</button>
+                <button id="unlockConhecimento2" class="upgrade-button" data-cost="30">Treinar</button>
+                <button id="unlockDados" class="upgrade-button" data-cost="300">Treinar</button>
                 <button id="unlockGrana" class="upgrade-button" data-cost="100">Trabalhar</button>		
                 <button id="unlockCodigo" class="upgrade-button" data-cost="200">Programar</button>
                 <button id="unlockDados" class="upgrade-button" data-cost="300">Treinar</button>
+               
             </div>
         </div>
         <div class="right-column">
