--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
             <div class="click-panel">
                 <div id="clickable"></div>
                 <div>
-                    <button id="conhecimentoBtn">Aprender</button>
-                    <button id="granaBtn" class="hidden">Trabalhar</button>
-                    <button id="codigoBtn" class="hidden">Programar</button>
-                    <button id="dadosBtn" class="hidden">Treinar</button>
+                    <button id="conhecimentoBtn" class="ativ-button">Aprender</button>
+                    <button id="granaBtn" class="hidden" class="ativ-button">Trabalhar</button>
+                    <button id="codigoBtn" class="hidden" class="ativ-button">Programar</button>
+                    <button id="dadosBtn" class="hidden" class="ativ-button">Treinar</button>
                 </div>
             </div>
             <div class="upgrades-panel">
