--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
                 <div id="clickable"></div>
                 <div>
                     <button id="conhecimentoBtn" class="ativ-button">Aprender</button>
-                    <button id="granaBtn" class="hidden" class="ativ-button">Trabalhar</button>
-                    <button id="codigoBtn" class="hidden" class="ativ-button">Programar</button>
-                    <button id="dadosBtn" class="hidden" class="ativ-button">Treinar</button>
+                    <button id="granaBtn" class="ativ-button hidden">Trabalhar</button>
+                    <button id="codigoBtn" class="ativ-button hidden">Programar</button>
+                    <button id="dadosBtn" class="ativ-button hidden">Treinar</button>
                 </div>
             </div>
             <div class="upgrades-panel">
