--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                 <!-- Conteúdo dos minigames será adicionado aqui -->
             </div>
         </div>
+
+//////////////////////////
+         
         <div class="center-column">
             <div class="click-panel">
                 <div id="clickable"></div>
@@ -59,9 +62,11 @@
             </div>
 </div>
 
+
+/////////////////////////////////////
         
 <div class="right-column">
-<div class="resource-panel" id="conhecimentoPanel">
+<div class="resource-panel" id="conhecimentoGenerationPanel">
 <div class="title-panel">
         <h2>Estudar</h2>
     </div>
@@ -82,7 +87,7 @@
     </div>
 </div>
 
-<div class="resource-panel hidden" id="granaPanel">
+<div class="resource-panel hidden" id="granaGenerationPanel">
     <div class="title-panel">
         <h2>Lucrar</h2>
     </div>
@@ -103,7 +108,7 @@
     </div>
 </div>
 
-<div class="resource-panel hidden" id="codigoPanel">
+<div class="resource-panel hidden" id="codigoGenerationPanel">
     <div class="title-panel">
         <h2>Programar</h2>
     </div>
@@ -124,7 +129,7 @@
     </div>
 </div>
 
-<div class="resource-panel hidden" id="dadosPanel">
+<div class="resource-panel hidden" id="dadosGenerationPanel">
     <div class="title-panel">
         <h2>Treinar</h2>
     </div>
