--- a/index.html
+++ b/index.html
@@ -66,16 +66,18 @@
             <div class="resource-generation" onclick="handleClick('conhecimento', 1)">
                 <div class="generation-title">Gerar Conhecimento Básico</div>
                 <div class="generation-cost">Custo: 10 Conhecimento</div>
-                <div class="production-label">Produção: 10/10s</div>
-                <div class="progress-bar"><div class="progress"></div></div>
-                <p>Nível: <span>1</span></p>
+                <div class="production-label" id="conhecimentoProductionLabel1">Produção: 10/10s</div>
+                <div class="progress-bar"><div class="progress" id="conhecimentoProgress1"></div></div>
+                <p>Nível: <span id="conhecimentoLevel1">1</span></p>
+                <p id="conhecimentoTimer1">Tempo restante: 10s</p>
             </div>
             <div class="resource-generation hidden" onclick="handleClick('conhecimento', 2)">
                 <div class="generation-title">Gerar Conhecimento Avançado</div>
                 <div class="generation-cost">Custo: 20 Conhecimento</div>
-                <div class="production-label">Produção: 20/10s</div>
-                <div class="progress-bar"><div class="progress"></div></div>
-                <p>Nível: <span>1</span></p>
+                <div class="production-label" id="conhecimentoProductionLabel2">Produção: 10/10s</div>
+                <div class="progress-bar"><div class="progress" id="conhecimentoProgress2"></div></div>
+                <p>Nível: <span id="conhecimentoLevel2">1</span></p>
+                <p id="conhecimentoTimer2">Tempo restante: 10s</p>
             </div>
         </div>
 
@@ -86,9 +88,10 @@
             <div class="resource-generation" onclick="handleClick('dados', 1)">
                 <div class="generation-title">Gerar Dados Básicos</div>
                 <div class="generation-cost">Custo: 10 Conhecimento</div>
-                <div class="production-label">Produção: 10/10s</div>
-                <div class="progress-bar"><div class="progress"></div></div>
-                <p>Nível: <span>1</span></p>
+                <div class="production-label" id="dadosProductionLabel1">Produção: 10/10s</div>
+                <div class="progress-bar"><div class="progress" id="dadosProgress1"></div></div>
+                <p>Nível: <span id="dadosLevel1">1</span></p>
+                <p id="dadosTimer1">Tempo restante: 10s</p>
             </div>
         </div>
 
@@ -100,9 +103,10 @@
             <div class="resource-generation" onclick="handleClick('codigo', 1)">
                 <div class="generation-title">Gerar Código Básico</div>
                 <div class="generation-cost">Custo: 10 Conhecimento</div>
-                <div class="production-label">Produção: 10/10s</div>
-                <div class="progress-bar"><div class="progress"></div></div>
-                <p>Nível: <span>1</span></p>
+                <div class="production-label" id="codigoProductionLabel1">Produção: 10/10s</div>
+                <div class="progress-bar"><div class="progress" id="codigoProgress1"></div></div>
+                <p>Nível: <span id="codigoLevel1">1</span></p>
+                <p id="codigoTimer1">Tempo restante: 10s</p>
             </div>
         </div>
 
@@ -114,9 +118,10 @@
             <div class="resource-generation" onclick="handleClick('grana', 1)">
                 <div class="generation-title">Gerar Grana Básica</div>
                 <div class="generation-cost">Custo: 10 Conhecimento</div>
-                <div class="production-label">Produção: 10/10s</div>
-                <div class="progress-bar"><div class="progress"></div></div>
-                <p>Nível: <span>1</span></p>
+                <div class="production-label" id="granaProductionLabel1">Produção: 10/10s</div>
+                <div class="progress-bar"><div class="progress" id="granaProgress1"></div></div>
+                <p>Nível: <span id="granaLevel1">1</span></p>
+                <p id="granaTimer1">Tempo restante: 10s</p>
             </div>
         </div>
     </div>
