--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="resource-title">
                 Gerar Conhecimento
             </div>
-            <div class="resource-generation" onclick="handleClick('conhecimento', 1)">
+            <div class="resource-generation" id="generateConhecimento1">
                 <div class="generation-title">Gerar Conhecimento Básico</div>
                 <div class="generation-cost">Custo: 10 Conhecimento</div>
                 <div class="production-label" id="conhecimentoProductionLabel1">Produção: 10/10s</div>
@@ -71,7 +71,7 @@
                 <p>Nível: <span id="conhecimentoLevel1">1</span></p>
                 <p id="conhecimentoTimer1">Tempo restante: 10s</p>
             </div>
-            <div class="resource-generation hidden" onclick="handleClick('conhecimento', 2)">
+            <div class="resource-generation hidden" id="generateConhecimento2">
                 <div class="generation-title">Gerar Conhecimento Avançado</div>
                 <div class="generation-cost">Custo: 20 Conhecimento</div>
                 <div class="production-label" id="conhecimentoProductionLabel2">Produção: 10/10s</div>
@@ -85,7 +85,7 @@
             <div class="resource-title">
                 Gerar Dados
             </div>
-            <div class="resource-generation" onclick="handleClick('dados', 1)">
+            <div class="resource-generation" id="generateDados1">
                 <div class="generation-title">Gerar Dados Básicos</div>
                 <div class="generation-cost">Custo: 10 Conhecimento</div>
                 <div class="production-label" id="dadosProductionLabel1">Produção: 10/10s</div>
@@ -100,7 +100,7 @@
             <div class="resource-title">
                 Gerar Código
             </div>
-            <div class="resource-generation" onclick="handleClick('codigo', 1)">
+            <div class="resource-generation" generateCodigo1">
                 <div class="generation-title">Gerar Código Básico</div>
                 <div class="generation-cost">Custo: 10 Conhecimento</div>
                 <div class="production-label" id="codigoProductionLabel1">Produção: 10/10s</div>
@@ -115,7 +115,7 @@
             <div class="resource-title">
                 Gerar Grana
             </div>
-            <div class="resource-generation" onclick="handleClick('grana', 1)">
+            <div class="resource-generation" generateGrana1">
                 <div class="generation-title">Gerar Grana Básica</div>
                 <div class="generation-cost">Custo: 10 Conhecimento</div>
                 <div class="production-label" id="granaProductionLabel1">Produção: 10/10s</div>
