--- a/index.html
+++ b/index.html
@@ -63,14 +63,24 @@
             <div class="resource-title">
                 Gerar Conhecimento
             </div>
-            <div class="resource-generation" id="generateConhecimento1">
+<div class="resource-generation" id="generateConhecimento1">
+    <div class="level-display">Nível: <span id="conhecimentoLevel1">1</span></div>
+    <div class="generation-title">Gerar Conhecimento Básico</div>
+    <div class="generation-cost">Custo: 10 Conhecimento</div>
+    <div class="production-label" id="conhecimentoProductionLabel1">Produção: 10/10s</div>
+    <div class="progress-bar"><div class="progress" id="conhecimentoProgress1"></div></div>
+    <div class="timer" id="conhecimentoTimer1">Tempo restante: 10s</div>
+</div>
+
+                
+<!--             <div class="resource-generation" id="generateConhecimento1">
                 <div class="generation-title">Gerar Conhecimento Básico</div>
                 <div class="generation-cost">Custo: 10 Conhecimento</div>
                 <div class="production-label" id="conhecimentoProductionLabel1">Produção: 10/10s</div>
                 <div class="progress-bar"><div class="progress" id="conhecimentoProgress1"></div></div>
                 <p>Nível: <span id="conhecimentoLevel1">1</span></p>
                 <p id="conhecimentoTimer1">Tempo restante: 10s</p>
-            </div>
+            </div> -->
             <div class="resource-generation hidden" id="generateConhecimento2">
                 <div class="generation-title">Gerar Conhecimento Avançado</div>
                 <div class="generation-cost">Custo: 20 Conhecimento</div>
