--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
                 <p id="conhecimentoTimer1">Tempo restante: 10s</p>
             </div> -->
             <div class="resource-generation hidden" id="generateConhecimento2">
+                <div class="level-display">Nível: <span id="conhecimentoLevel2">1</span></div>
                 <div class="generation-title">Gerar Conhecimento Avançado</div>
                 <div class="generation-cost">Custo: 20 Conhecimento</div>
                 <div class="production-label" id="conhecimentoProductionLabel2">Produção: 10/10s</div>
@@ -96,6 +97,7 @@
                 Gerar Dados
             </div>
             <div class="resource-generation" id="generateDados1">
+                <div class="level-display">Nível: <span id="dadosLevel1">1</span></div>
                 <div class="generation-title">Gerar Dados Básicos</div>
                 <div class="generation-cost">Custo: 10 Conhecimento</div>
                 <div class="production-label" id="dadosProductionLabel1">Produção: 10/10s</div>
@@ -111,6 +113,7 @@
                 Gerar Código
             </div>
             <div class="resource-generation" generateCodigo1">
+                <div class="level-display">Nível: <span id="CodigoLevel1">1</span></div>
                 <div class="generation-title">Gerar Código Básico</div>
                 <div class="generation-cost">Custo: 10 Conhecimento</div>
                 <div class="production-label" id="codigoProductionLabel1">Produção: 10/10s</div>
@@ -126,6 +129,7 @@
                 Gerar Grana
             </div>
             <div class="resource-generation" generateGrana1">
+                <div class="level-display">Nível: <span id="GranaLevel1">1</span></div>
                 <div class="generation-title">Gerar Grana Básica</div>
                 <div class="generation-cost">Custo: 10 Conhecimento</div>
                 <div class="production-label" id="granaProductionLabel1">Produção: 10/10s</div>
