--- a/index.html
+++ b/index.html
@@ -81,14 +81,14 @@
                 <p>Nível: <span id="conhecimentoLevel1">1</span></p>
                 <p id="conhecimentoTimer1">Tempo restante: 10s</p>
             </div> -->
+                
             <div class="resource-generation hidden" id="generateConhecimento2">
                 <div class="level-display">Nível: <span id="conhecimentoLevel2">1</span></div>
                 <div class="generation-title">Gerar Conhecimento Avançado</div>
                 <div class="generation-cost">Custo: 20 Conhecimento</div>
                 <div class="production-label" id="conhecimentoProductionLabel2">Produção: 10/10s</div>
                 <div class="progress-bar"><div class="progress" id="conhecimentoProgress2"></div></div>
-                <p>Nível: <span id="conhecimentoLevel2">1</span></p>
-                <p id="conhecimentoTimer2">Tempo restante: 10s</p>
+                <div class="timer" id="conhecimentoTimer2">Tempo restante: 10s</div>
             </div>
         </div>
 
@@ -102,8 +102,7 @@
                 <div class="generation-cost">Custo: 10 Conhecimento</div>
                 <div class="production-label" id="dadosProductionLabel1">Produção: 10/10s</div>
                 <div class="progress-bar"><div class="progress" id="dadosProgress1"></div></div>
-                <p>Nível: <span id="dadosLevel1">1</span></p>
-                <p id="dadosTimer1">Tempo restante: 10s</p>
+                <div class="timer" id="dadosTimer1">Tempo restante: 10s</div>
             </div>
         </div>
 
@@ -118,8 +117,7 @@
                 <div class="generation-cost">Custo: 10 Conhecimento</div>
                 <div class="production-label" id="codigoProductionLabel1">Produção: 10/10s</div>
                 <div class="progress-bar"><div class="progress" id="codigoProgress1"></div></div>
-                <p>Nível: <span id="codigoLevel1">1</span></p>
-                <p id="codigoTimer1">Tempo restante: 10s</p>
+                <div class="timer" id="codigoTimer1">Tempo restante: 10s</div>
             </div>
         </div>
 
@@ -134,8 +132,7 @@
                 <div class="generation-cost">Custo: 10 Conhecimento</div>
                 <div class="production-label" id="granaProductionLabel1">Produção: 10/10s</div>
                 <div class="progress-bar"><div class="progress" id="granaProgress1"></div></div>
-                <p>Nível: <span id="granaLevel1">1</span></p>
-                <p id="granaTimer1">Tempo restante: 10s</p>
+                <div class="timer" id="granaTimer1">Tempo restante: 10s</div>
             </div>
         </div>
     </div>
