--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <div class="resource-title">
                 Gerar Código
             </div>
-            <div class="resource-generation" generateCodigo1">
+            <div class="resource-generation" id="generateCodigo1">
                 <div class="level-display">Nível: <span id="CodigoLevel1">1</span></div>
                 <div class="generation-title">Gerar Código Básico</div>
                 <div class="generation-cost">Custo: 10 Conhecimento</div>
@@ -126,7 +126,7 @@
             <div class="resource-title">
                 Gerar Grana
             </div>
-            <div class="resource-generation" generateGrana1">
+            <div class="resource-generation" id="generateGrana1">
                 <div class="level-display">Nível: <span id="GranaLevel1">1</span></div>
                 <div class="generation-title">Gerar Grana Básica</div>
                 <div class="generation-cost">Custo: 10 Conhecimento</div>
