--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 Gerar Código
             </div>
             <div class="resource-generation" id="generateCodigo1">
-                <div class="level-display">Nível: <span id="CodigoLevel1">1</span></div>
+                <div class="level-display">Nível: <span id="codigoLevel1">1</span></div>
                 <div class="generation-title">Gerar Código Básico</div>
                 <div class="generation-cost">Custo: 10 Conhecimento</div>
                 <div class="production-label" id="codigoProductionLabel1">Produção: 10/10s</div>
@@ -121,13 +121,16 @@
             </div>
         </div>
 
+
+    
+
         <!-- Grana (Inicialmente oculto) -->
         <div id="granaGenerationPanel" class="generation-panel hidden">
             <div class="resource-title">
                 Gerar Grana
             </div>
             <div class="resource-generation" id="generateGrana1">
-                <div class="level-display">Nível: <span id="GranaLevel1">1</span></div>
+                <div class="level-display">Nível: <span id="granaLevel1">1</span></div>
                 <div class="generation-title">Gerar Grana Básica</div>
                 <div class="generation-cost">Custo: 10 Conhecimento</div>
                 <div class="production-label" id="granaProductionLabel1">Produção: 10/10s</div>
