--- a/index.html
+++ b/index.html
@@ -120,9 +120,7 @@
                 <div class="timer" id="codigoTimer1">Tempo restante: 10s</div>
             </div>
         </div>
-
-
-    
+  
 
         <!-- Grana (Inicialmente oculto) -->
         <div id="granaGenerationPanel" class="generation-panel hidden">
@@ -138,6 +136,12 @@
                 <div class="timer" id="granaTimer1">Tempo restante: 10s</div>
             </div>
         </div>
+         <div class="image-container">
+        <img src="Conhecimento.png" alt="Conhecimento">
+        <img src="Data.png" alt="Dados">
+        <img src="Grana.png" alt="Grana">
+        <img src="Code.png" alt="Código">
+    </div>
     </div>
         
 <!-- ////////////////////////////////////////////////////////////////////////////////////////// -->
