--- a/index.html
+++ b/index.html
@@ -138,6 +138,14 @@
         </div>
 
     </div>
+
+    <div class="image-container">
+        <img src="Conhecimento.png" alt="Conhecimento">
+        <img src="Data.png" alt="Dados">
+        <img src="Grana.png" alt="Grana">
+        <img src="Code.png" alt="Código">
+    </div>
+        
     </div>
         
 <!-- ////////////////////////////////////////////////////////////////////////////////////////// -->
