--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Jogo Idle Clicker</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-   <body>
+   
+<body>
     <script src="script.js"></script>
     <div id="game">
-
-               <div class="left-column">
+        <div class="left-column">
             <div class="resource-panel">
                 <div class="panel-title">Recursos</div>
                 <div id="conhecimentoPanel" class="panel">
@@ -42,10 +42,6 @@
                     <button id="dadosBtn" class="ativ-button hidden">Treinar</button>
                 </div>
             </div>
-  
-           
-
-            
 
         </div>
 <!-- ////////////////////////////////////////////////////////////////////////////////////////// -->
@@ -126,18 +122,16 @@
 
     </div>
 
-        <div id="geralPanel" class="geral-panel">
-            <div class="panel-title">Geral</div>
+    <div class="bottom-panel">
+                <div class="panel-title">Upgrades</div>
                 <button id="unlockConhecimento1" class="upgrade-button" data-cost="20">Ebooks</button>
                 <button id="unlockConhecimento2" class="upgrade-button" data-cost="30">Videos</button>
                 <button id="unlockDados" class="upgrade-button" data-cost="100">Treinar</button>
                 <button id="unlockGrana" class="upgrade-button" data-cost="100">Trabalhar</button>		
                 <button id="unlockCodigo" class="upgrade-button" data-cost="100">Programar</button>
-        </div>
+    </div>
+ 
+    </div>
 
-
-
-  
-   </div>
 </body>
 </html>
