--- a/index.html
+++ b/index.html
@@ -46,8 +46,12 @@
             </div>
             <div class="bottom-half">
                 <div class="bottom-panel">
-                    <div class="panel-title">Novo Painel</div>
-                    <!-- Adicione aqui o conteúdo do novo painel -->
+                <div class="panel-title">Upgrades</div>
+                <button id="unlockConhecimento1" class="upgrade-button" data-cost="20">Ebooks</button>
+                <button id="unlockConhecimento2" class="upgrade-button" data-cost="30">Videos</button>
+                <button id="unlockDados" class="upgrade-button" data-cost="100">Treinar</button>
+                <button id="unlockGrana" class="upgrade-button" data-cost="100">Trabalhar</button>		
+                <button id="unlockCodigo" class="upgrade-button" data-cost="100">Programar</button>
                 </div>
             </div>
         </div>
