--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <div class="click-panel">
                         <div id="clickable"></div>
                         <div>
-                            <button id="conhecimentoBtn" class="ativ-button">Aprender</button>
+                            <button id="conhecimentoBtn" class="ativ-button active">Aprender</button>
                             <button id="granaBtn" class="ativ-button hidden">Trabalhar</button>
                             <button id="codigoBtn" class="ativ-button hidden">Programar</button>
                             <button id="dadosBtn" class="ativ-button hidden">Treinar</button>
