--- a/index.html
+++ b/index.html
@@ -15,20 +15,16 @@
                     <div class="resource-panel">
                         <div class="panel-title">Recursos</div>
                         <div id="conhecimentoPanel" class="panel">
-                            <div class="panel-title">Conhecimento</div>
-                            <div class="resource-counter">Quantidade: <span id="conhecimentoCounter">0</span></div>
-                        </div>
+                            <div class="panel-title">Conhecimento <span class="resource-counter">Quantidade: <span id="conhecimentoCounter">0</span></span></div>
+                            </div>
                         <div id="granaPanel" class="panel hidden">
-                            <div class="panel-title">Grana</div>
-                            <div class="resource-counter">Quantidade: <span id="granaCounter">0</span></div>
+                             <div class="panel-title">Grana <span class="resource-counter">Quantidade: <span id="granaCounter">0</span></span></div>
                         </div>
                         <div id="codigoPanel" class="panel hidden">
-                            <div class="panel-title">Código</div>
-                            <div class="resource-counter">Quantidade: <span id="codigoCounter">0</span></div>
+                            <div class="panel-title">Código <span class="resource-counter">Quantidade: <span id="codigoCounter">0</span></span></div>
                         </div>
                         <div id="dadosPanel" class="panel hidden">
-                            <div class="panel-title">Dados</div>
-                            <div class="resource-counter">Quantidade: <span id="dadosCounter">0</span></div>
+                            <div class="panel-title">Dados <span class="resource-counter">Quantidade: <span id="dadosCounter">0</span></span></div>
                         </div>
                     </div>
                 </div>
