--- a/index.html
+++ b/index.html
@@ -17,15 +17,32 @@
                         <div class="panel-title">Recursos</div>
                         <div id="conhecimentoPanel" class="panel">
                             <div class="panel-title">Conhecimento <span class="resource-counter">Quantidade: <span id="conhecimentoCounter">0</span></span></div>
+                            <div class="unlock-buttons">
+                            <button id="conhecimentoUnlock1" class="unlock-btn" data-unlock="1"</button>
+                            <button id="conhecimentoUnlock2" class="unlock-btn" data-unlock="2"</button>
+                            <button id="conhecimentoUnlock3" class="unlock-btn" data-unlock="3"</button>
+                        </div>
                             </div>
                         <div id="granaPanel" class="panel hidden">
                              <div class="panel-title">Grana <span class="resource-counter">Quantidade: <span id="granaCounter">0</span></span></div>
+                            <div class="unlock-buttons">
+                            <button id="conhecimentoUnlock1" class="unlock-btn" data-unlock="1"</button>
+                            <button id="conhecimentoUnlock2" class="unlock-btn" data-unlock="2"</button>
+                            <button id="conhecimentoUnlock3" class="unlock-btn" data-unlock="3"</button>
                         </div>
                         <div id="codigoPanel" class="panel hidden">
                             <div class="panel-title">Código <span class="resource-counter">Quantidade: <span id="codigoCounter">0</span></span></div>
+                            <div class="unlock-buttons">
+                            <button id="codigoUnlock1" class="unlock-btn" data-unlock="1"</button>
+                            <button id="codigoUnlock2" class="unlock-btn" data-unlock="2"</button>
+                            <button id="codigoUnlock3" class="unlock-btn" data-unlock="3"</button>
                         </div>
                         <div id="dadosPanel" class="panel hidden">
                             <div class="panel-title">Dados <span class="resource-counter">Quantidade: <span id="dadosCounter">0</span></span></div>
+                            <div class="unlock-buttons">
+                            <button id="dadosUnlock1" class="unlock-btn" data-unlock="1"</button>
+                            <button id="dadosUnlock2" class="unlock-btn" data-unlock="2"</button>
+                            <button id="dadosUnlock3" class="unlock-btn" data-unlock="3"</button>
                         </div>
                     </div>
                 </div>
